[package]
name = "schedix"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-session = { version = "0.10.1", features = ["cookie-session"] }
actix-web = { version = "4.9.0" }
env_logger = "0.11.6"
hashlink = "0.10.0"
serde = { version = "1.0.217", features = ["derive"] }
uuid = { version = "1.11.0", features = ["v4"] }

